--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "lint": "./node_modules/.bin/eslint --fix . || exit 0",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -23,14 +23,18 @@
   "homepage": "https://github.com/darklordzw/winston-splunk-http-transport#readme",
   "dependencies": {
     "splunk-logging": "0.10.1",
+    "triple-beam": "1.3.0",
     "winston-transport": "4.2.0"
   },
   "devDependencies": {
+    "chai": "4.2.0",
     "eslint": "5.10.0",
     "eslint-config-airbnb-base": "13.1.0",
     "eslint-config-prettier": "3.3.0",
     "eslint-plugin-import": "2.14.0",
     "eslint-plugin-prettier": "3.0.0",
-    "prettier": "1.15.3"
+    "mocha": "5.2.0",
+    "prettier": "1.15.3",
+    "winston": "3.1.0"
   }
 }
